# Job-automatation-

./: README.md  dashboard.py  job_matcher.py  job_sources.json  pyproject.toml  resume_builder.py  sample_jobs.json
